deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockapp
  labels:
    app: stockapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockapp
  template:
    metadata:
      labels:
        app: stockapp
    spec:
      containers:
      - name: stockapp
        image: ghcr.io/jamesglennan/stockapp
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
