deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockapp
  labels:
    app: stockapp
spec:
  selector:
    app: stockapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
